--- a/demo/index.html
+++ b/demo/index.html
@@ -33,10 +33,10 @@ limitations under the License.
       <p>Open: false</p>
 
       <p>Modal Icon:</p>
-      <modal-icon
+      <!-- <modal-icon
         icon="icons:polymer"
         icon-style-class="custom">
-      </modal-icon>
+      </modal-icon> -->
 
       <p>===== DEMO 2 =====</p>
       <p>Icon: icons:polymer</p>
@@ -46,11 +46,11 @@ limitations under the License.
       <p>Open: false</p>
 
       <p>Modal Icon:</p>
-      <modal-icon
+      <!-- <modal-icon
         icon="icons:polymer"
         icon-style-class="custom"
         show-icon>
-      </modal-icon>
+      </modal-icon> -->
 
       <p>===== DEMO 3 =====</p>
       <p>Icon: icons:polymer</p>
@@ -60,11 +60,11 @@ limitations under the License.
       <p>Open: false</p>
 
       <p>Modal Icon:</p>
-      <modal-icon
+      <!-- <modal-icon
         icon="icons:polymer"
         icon-style-class="custom"
         openable>
-      </modal-icon>
+      </modal-icon> -->
 
       <p>===== DEMO 4 =====</p>
       <p>Icon: icons:polymer</p>
@@ -75,9 +75,6 @@ limitations under the License.
 
       <p>Modal Icon:</p>
       <modal-icon
-        icon="icons:polymer"
-        icon-style-class="custom"
-        show-icon
         openable>
       </modal-icon>
 
@@ -92,8 +89,9 @@ limitations under the License.
       <modal-icon
         icon="icons:polymer"
         icon-style-class="custom"
-        openable
-        open>
+        openable="false"
+        open="false"
+        >
       </modal-icon>
 
       <p>===== DEMO 6 =====</p>
@@ -104,13 +102,13 @@ limitations under the License.
       <p>Open: true</p>
 
       <p>Modal Icon:</p>
-      <modal-icon
+      <!-- <modal-icon
         icon="icons:polymer"
         icon-style-class="custom"
         show-icon
         openable
         open>
-      </modal-icon>
+      </modal-icon> -->
     </template>
   </dom-bind>
 </body>
