--- a/modal-icon.html
+++ b/modal-icon.html
@@ -54,16 +54,17 @@ A Polymer Element showing a modular icon-button that can change between the expa
         display: block;
       }
     </style>
-
-    <icon-button
-      bigger
-      class$="[[_showOrHideCustomIcon(showIcon, openable)]]"
-      disabled="[[!openable]]"
-      hide-ripple="[[!ripple]]"
-      icon="[[icon]]"
-      padded
-      style-class="[[iconStyleClass]]">
-    </icon-button>
+    <template is="dom-if" if="[[showIcon]]">
+      <icon-button
+        bigger
+        class$="[[_showOrHideCustomIcon(showIcon, openable)]]"
+        disabled="[[!openable]]"
+        hide-ripple="[[!ripple]]"
+        icon="[[icon]]"
+        padded
+        style-class="[[iconStyleClass]]">
+      </icon-button>
+    </template>
 
     <icon-button
       bigger
@@ -84,129 +85,132 @@ A Polymer Element showing a modular icon-button that can change between the expa
 
   <script>
   (function() {
-    'use strict';
+  'use strict';
 
-    Polymer({
-      is: 'modal-icon',
+  Polymer({
+    is: 'modal-icon',
 
-      properties: {
-        /**
-         * (Optional)
-         *
-         * The icon.
-         *
-         * @type {String}
-         * @default ''
-         */
-        icon: {
-          type: String,
-          value: ''
-        },
-
-        /**
-         * (Optional)
-         *
-         * The style class for the given icon.
-         *
-         * @type {String}
-         * @default ''
-         */
-        iconStyleClass: {
-          type: String,
-          value: ''
-        },
-
-        /**
-         * (Optional)
-         *
-         * Whether to show the given icon (override the expand and collapse icons).
-         *
-         * @type {Boolean}
-         * @default false
-         */
-        showIcon: {
-          type: Boolean,
-          value: false
-        },
-
-        /**
-         * (Optional)
-         *
-         * Whether this modal-icon is openable (to show the expand and collapse icons).
-         *
-         * @type {Boolean}
-         * @default false
-         */
-        openable: {
-          type: Boolean,
-          value: false
-        },
-
-        /**
-         * (Optional)
-         *
-         * Whether this modal-icon is open.
-         *
-         * @type {Boolean}
-         * @default false
-         */
-        open: {
-          type: Boolean,
-          value: false
-        },
-
-        /**
-         * (Optional)
-         *
-         * Whether to show the polymer button ripple effect.
-         *
-         * @type {Boolean}
-         * @default false
-         */
-        ripple: {
-          type: Boolean,
-          value: false
-        }
+    properties: {
+      /**
+       * (Optional)
+       *
+       * The icon.
+       *
+       * @type {String}
+       * @default ''
+       */
+      icon: {
+        type: String,
+        value: ''
       },
 
       /**
-       * Returns the style class for the given custom icon based on whether to show the custom icon and whether this modal-item is openable.
+       * (Optional)
        *
-       * @param {Boolean} showIcon
-       * @param {Boolean} openable
-       * @return {String}
-       * @private
+       * The style class for the given icon.
+       *
+       * @type {String}
+       * @default ''
        */
-      _showOrHideCustomIcon: function(showIcon, openable) {
-        return (showIcon || !openable) ? 'show' : 'hide';
+      iconStyleClass: {
+        type: String,
+        value: ''
       },
 
       /**
-       * Returns the style class for the collapse icon based on whether to show the custom icon, whether this modal-item is openable, and whether it is open.
+       * (Optional)
        *
-       * @param {Boolean} showIcon
-       * @param {Boolean} openable
-       * @param {Boolean} open
-       * @return {String}
-       * @private
+       * Whether to show the given icon (override the expand and collapse icons).
+       *
+       * @type {Boolean}
+       * @default false
        */
-      _showOrHideOpenedIcon: function(showIcon, openable, open) {
-        return (!showIcon && openable && open) ? 'show' : 'hide';
+      showIcon: {
+        type: Boolean,
+        value: false
       },
 
       /**
-       * Returns the style class for the expand icon based on whether to show the custom icon, whether this modal-item is openable, and whether it is open.
+       * (Optional)
        *
-       * @param {Boolean} showIcon
-       * @param {Boolean} openable
-       * @param {Boolean} open
-       * @return {String}
-       * @private
+       * Whether this modal-icon is openable (to show the expand and collapse icons).
+       *
+       * @type {Boolean}
+       * @default false
        */
-      _showOrHideClosedIcon: function(showIcon, openable, open) {
-        return (!showIcon && openable && !open) ? 'show' : 'hide';
+      openable: {
+        type: Boolean,
+        value: false
+      },
+
+      /**
+       * (Optional)
+       *
+       * Whether this modal-icon is open.
+       *
+       * @type {Boolean}
+       * @default false
+       */
+      open: {
+        type: Boolean,
+        value: false
+      },
+
+      /**
+       * (Optional)
+       *
+       * Whether to show the polymer button ripple effect.
+       *
+       * @type {Boolean}
+       * @default false
+       */
+      ripple: {
+        type: Boolean,
+        value: false
       }
-    });
-  })();
-  </script>
+    },
+
+    /**
+     * Returns the style class for the given custom icon based on whether to show the custom icon and whether this modal-item is openable.
+     *
+     * @param {Boolean} showIcon
+     * @param {Boolean} openable
+     * @return {String}
+     * @private
+     */
+    _showOrHideCustomIcon: function(showIcon, openable) {
+      console.log('showOrHideCustomIcon', showIcon, openable);
+      return showIcon || !openable ? 'show' : 'hide';
+    },
+
+    /**
+     * Returns the style class for the collapse icon based on whether to show the custom icon, whether this modal-item is openable, and whether it is open.
+     *
+     * @param {Boolean} showIcon
+     * @param {Boolean} openable
+     * @param {Boolean} open
+     * @return {String}
+     * @private
+     */
+    _showOrHideOpenedIcon: function(showIcon, openable, open) {
+      console.log('showOrHideOpenedIcon', showIcon, openable, open);
+      return !showIcon && openable && open ? 'show' : 'hide';
+    },
+
+    /**
+     * Returns the style class for the expand icon based on whether to show the custom icon, whether this modal-item is openable, and whether it is open.
+     *
+     * @param {Boolean} showIcon
+     * @param {Boolean} openable
+     * @param {Boolean} open
+     * @return {String}
+     * @private
+     */
+    _showOrHideClosedIcon: function(showIcon, openable, open) {
+      console.log('showOrHideClosedIcon', showIcon, openable, open);
+      return !showIcon && openable && !open ? 'show' : 'hide';
+    }
+  });
+})();
+</script>
 </dom-module>
